로딩 애니메이션 완료

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!--SON-->
     <link rel="stylesheet" href="SON/index.css" />
     <link rel="stylesheet" href="SON/hero.css" />
+    <link rel="stylesheet" href="SON/test.css" />
     <script src="SON/index.js" defer></script>
     <!--LEE-->
     <link rel="stylesheet" href="LEE/index.css" />
@@ -111,10 +112,11 @@
             </div>
           </div>
         </div>
-        <div class="SmvImages">
-          <img src="SON/img/hero1.jpg" class="active" alt="" />
-          <img src="SON/img/hero2.jpg" alt="" />
-        </div>
+        <section class="section-container">
+          <div class="background-image"></div>
+          <div class="animated-bar"></div>
+          <span class="animated-bar-text">Life on Line</span>
+        </section>
       </div>
     </main>
     <!--섹션 2(LEE)-->
