--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       </div>
     </header>
     <main>
-      <div class="SmvArea">
+      <div id="SmvTarget1" class="SmvArea">
         <div class="SmvText">
           <div class="SmainTitle">Life on LINE</div>
           <div class="SmvSubText">라인은 언제나 사용자와 함께 합니다.</div>
@@ -170,7 +170,7 @@
         <div class="Lservice">
           <div class="Ltext_area">
             <picture class="LlinkIcon"
-              ><img src="image/line_news_img.png" alt=""
+              ><img src="img/line_news_img.png" alt=""
             /></picture>
             <div class="Ltext_box">
               <h3>LINE NEWS</h3>
@@ -187,22 +187,21 @@
           </div>
           <div class="Limage_area">
             <picture
-              ><img class="Lfirst_img" src="image/line_img.png" alt=""
+              ><img class="Lfirst_img" src="img/line_img.png" alt=""
             /></picture>
           </div>
         </div>
       </div>
-
       <div class="Lservice_Cnt">
         <div class="Lservice">
           <div class="Limage_area">
             <picture
-              ><img class="Lsecond_img" src="image/line_img2.png" alt=""
+              ><img class="Lsecond_img" src="img/line_img2.png" alt=""
             /></picture>
           </div>
           <div class="Ltext_area music">
             <picture class="LlinkIcon"
-              ><img src="image/naver_music.png" alt=""
+              ><img src="img/naver_music.png" alt=""
             /></picture>
             <div class="Ltext_box">
               <h3>LINE MUSIC</h3>
@@ -235,14 +234,14 @@
     </section>
     <section id="Lcommunication">
       <div class="Lmain_sub">
-        <h2 class="Lmain_title">커뮤니케이션 앱</h2>
+        <h2 id="SmvTarget2" class="Lmain_title">커뮤니케이션 앱</h2>
         <p class="Lsub_text">
           언제 어디서나 무료로 메세지를 보내고, 깨끗한 음질로 24시간 자유롭게
           무료 통화가<br />가능한 새로운 커뮤니케이션 앱입니다.
         </p>
         <ul class="LcontentsList">
           <li class="Lcontent box">
-            <img src="image/content1.png" alt="" />
+            <img src="img/content1.png" alt="" />
             <h3 class="LonlyPc">대화, 음성통화, 영상통화</h3>
             <div>
               라인 유저라면 1:1은 물론 그룹을 만들어서 대화,<br />음성통화,
@@ -250,7 +249,7 @@
             </div>
           </li>
           <li class="Lcontent box">
-            <img src="image/content2.png" alt="" />
+            <img src="img/content2.png" alt="" />
             <h3 class="LonlyPc">스티커, 이모티콘, 테마</h3>
             <div>
               대화방에서 마음을 전할 수 있는 다양한 스티커와<br />이모티콘,
@@ -259,12 +258,12 @@
             </div>
           </li>
           <li class="Lcontent solo">
-            <img src="image/content3.png" alt="" />
+            <img src="img/content3.png" alt="" />
             <h3 class="LonlyPc">오픈챗</h3>
             <div>일상이나 관심사를 공유하고 정보를 나눌 수 있습니다.</div>
           </li>
           <li class="Lcontent box">
-            <img src="image/content4.png" alt="" />
+            <img src="img/content4.png" alt="" />
             <h3 class="LonlyPc">홈 탭</h3>
             <div>
               라인의 각종 서비스 및 스티커와 같은 다양한 정보와<br />콘텐츠를
@@ -272,7 +271,7 @@
             </div>
           </li>
           <li class="Lcontent box">
-            <img src="image/content5.png" alt="" />
+            <img src="img/content5.png" alt="" />
             <h3 class="LonlyPc">LINE VOOM</h3>
             <div>
               LINE VOOM에서 취향에 맞는 계정을 팔로우하고,<br />멋진 동영상,
@@ -280,7 +279,7 @@
             </div>
           </li>
           <li class="Lcontent">
-            <img src="image/content6.png" alt="" />
+            <img src="img/content6.png" alt="" />
             <h3 class="LonlyPc">월렛 탭</h3>
             <div>
               송금이나 결제 등 ‘라인 페이’ 서비스 외에도 다양한<br />금융
@@ -293,13 +292,13 @@
     <section class="LsingleBanner">
       <div class="LCorporate_support">
         <div class="LbannerTxt">기업 지원</div>
-        <img src="image/Corporate support.png" alt="" />
+        <img src="img/Corporate support.png" alt="" />
       </div>
     </section>
     <!--섹션 3(PARK)-->
     <main class="Pservice">
       <div class="Pservice__header">
-        <h1 class="Pservice__header-title">서비스</h1>
+        <h1 id="SmvTarget3" class="Pservice__header-title">서비스</h1>
         <span class="Pservice__header-sub"
           >일부 서비스는 특정 국가에서만 사용 가능합니다.</span
         >
@@ -1176,7 +1175,7 @@
     <footer class="Lko">
       <div class="LdownloadLinks">
         <ul>
-          <li><img src="image/icon-line_1.png" alt="" /></li>
+          <li><img src="img/icon-line_1.png" alt="" /></li>
           <li>
             <a
               href="https://apps.apple.com/kr/app/%EB%9D%BC%EC%9D%B8-line/id443904275"
