--- a/LEE/index.html
+++ b/LEE/index.html
@@ -22,6 +22,7 @@
         <div class="LscrollLine"></div>
       </div>
     </section>
+
     <section id="LmainService">
       <div class="Lgrid">
         <span class="Ldot bottom">・</span>
@@ -30,7 +31,7 @@
         <div class="Lservice">
           <div class="Ltext_area">
             <picture class="LlinkIcon"
-              ><img src="image/line_news_img.png" alt=""
+              ><img src="img/line_news_img.png" alt=""
             /></picture>
             <div class="Ltext_box">
               <h3>LINE NEWS</h3>
@@ -47,7 +48,7 @@
           </div>
           <div class="Limage_area">
             <picture
-              ><img class="Lfirst_img" src="image/line_img.png" alt=""
+              ><img class="Lfirst_img" src="img/line_img.png" alt=""
             /></picture>
           </div>
         </div>
@@ -57,12 +58,12 @@
         <div class="Lservice">
           <div class="Limage_area">
             <picture
-              ><img class="Lsecond_img" src="image/line_img2.png" alt=""
+              ><img class="Lsecond_img" src="img/line_img2.png" alt=""
             /></picture>
           </div>
           <div class="Ltext_area music">
             <picture class="LlinkIcon"
-              ><img src="image/naver_music.png" alt=""
+              ><img src="img/naver_music.png" alt=""
             /></picture>
             <div class="Ltext_box">
               <h3>LINE MUSIC</h3>
@@ -102,7 +103,7 @@
         </p>
         <ul class="LcontentsList">
           <li class="Lcontent box">
-            <img src="image/content1.png" alt="" />
+            <img src="img/content1.png" alt="" />
             <h3 class="LonlyPc">대화, 음성통화, 영상통화</h3>
             <div>
               라인 유저라면 1:1은 물론 그룹을 만들어서 대화,<br />음성통화,
@@ -110,7 +111,7 @@
             </div>
           </li>
           <li class="Lcontent box">
-            <img src="image/content2.png" alt="" />
+            <img src="img/content2.png" alt="" />
             <h3 class="LonlyPc">스티커, 이모티콘, 테마</h3>
             <div>
               대화방에서 마음을 전할 수 있는 다양한 스티커와<br />이모티콘,
@@ -119,12 +120,12 @@
             </div>
           </li>
           <li class="Lcontent solo">
-            <img src="image/content3.png" alt="" />
+            <img src="img/content3.png" alt="" />
             <h3 class="LonlyPc">오픈챗</h3>
             <div>일상이나 관심사를 공유하고 정보를 나눌 수 있습니다.</div>
           </li>
           <li class="Lcontent box">
-            <img src="image/content4.png" alt="" />
+            <img src="img/content4.png" alt="" />
             <h3 class="LonlyPc">홈 탭</h3>
             <div>
               라인의 각종 서비스 및 스티커와 같은 다양한 정보와<br />콘텐츠를
@@ -132,7 +133,7 @@
             </div>
           </li>
           <li class="Lcontent box">
-            <img src="image/content5.png" alt="" />
+            <img src="img/content5.png" alt="" />
             <h3 class="LonlyPc">LINE VOOM</h3>
             <div>
               LINE VOOM에서 취향에 맞는 계정을 팔로우하고,<br />멋진 동영상,
@@ -140,7 +141,7 @@
             </div>
           </li>
           <li class="Lcontent">
-            <img src="image/content6.png" alt="" />
+            <img src="img/content6.png" alt="" />
             <h3 class="LonlyPc">월렛 탭</h3>
             <div>
               송금이나 결제 등 ‘라인 페이’ 서비스 외에도 다양한<br />금융
@@ -153,13 +154,13 @@
     <section class="LsingleBanner">
       <div class="LCorporate_support">
         <div class="LbannerTxt">기업 지원</div>
-        <img src="image/Corporate support.png" alt="" />
+        <img src="img/Corporate support.png" alt="" />
       </div>
     </section>
     <footer class="Lko">
       <div class="LdownloadLinks">
         <ul>
-          <li><img src="image/icon-line_1.png" alt="" /></li>
+          <li><img src="img/icon-line_1.png" alt="" /></li>
           <li>
             <a
               href="https://apps.apple.com/kr/app/%EB%9D%BC%EC%9D%B8-line/id443904275"
