--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="LEE/index.css" />
     <link rel="stylesheet" href="LEE/communication.css" />
     <link rel="stylesheet" href="LEE/footer.css" />
+    <link rel="stylesheet" href="LEE/scrollNavWrap.css" />
     <script src="LEE/index.js" defer></script>
     <!--PARK-->
     <link rel="stylesheet" href="PARK/css/index.css" />
@@ -112,6 +113,12 @@
             </div>
           </div>
         </div>
+
+        <div class="LscrollNavWrap">
+          <span class="LscrollNav">Scroll</span>
+          <div class="LscrollLine"></div>
+        </div>
+
         <section class="section-container">
           <div class="background-image"></div>
           <div class="animated-bar"></div>
@@ -1130,7 +1137,7 @@
     <footer class="Lko">
       <div class="LdownloadLinks">
         <ul>
-          <li><img src="image/icon-line_1.png" alt="" /></li>
+          <li><img src="img/icon-line_1.png" alt="" /></li>
           <li>
             <a
               href="https://apps.apple.com/kr/app/%EB%9D%BC%EC%9D%B8-line/id443904275"
