--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
         </div>
         <section class="section-container">
           <div class="background-image"></div>
+          <div class="background-image2"></div>
           <div class="animated-bar"></div>
           <span class="animated-bar-text">Life on Line</span>
         </section>
