--- a/index.html
+++ b/index.html
@@ -152,8 +152,9 @@
           </div>
         </div>
         <section class="section-container">
-          <div class="background-image"></div>
-          <div class="background-image2"></div>
+          <div class="background-image">
+            <div class="background-image-wrapper"></div>
+          </div>
           <div class="animated-bar"></div>
           <span class="animated-bar-text">Life on Line</span>
         </section>
