--- a/PARK/index.html
+++ b/PARK/index.html
@@ -25,7 +25,7 @@
       </div>
       <section class="Pservice__category">
         <ul class="Pservice__category-buttonwrapper">
-          <button id="Pall" class="Pservice__category-button">
+          <button id="Pall" class="Pservice__category-button clickbutton">
             All Product
           </button>
           <button id="comu" class="Pservice__category-button">
