--- a/index.html
+++ b/index.html
@@ -37,29 +37,37 @@
         <h1 class="Sko-bbox">
           <a href="">
             <div class="image-wrapper">
-              <img class="logo onlyPc"src="img/icon-title-pc_1.png"alt=""/>
-              <img class="logo onlySp" src="SON/img/icon-title-sp_2.png"alt=""/>
+              <img class="logo onlyPc" src="img/icon-title-pc_1.png" alt="" />
+              <img
+                class="logo onlySp"
+                src="SON/img/icon-title-sp_2.png"
+                alt=""
+              />
             </div>
           </a>
         </h1>
         <!-- 1 nav Life on LINE 커뮤니케이션 서비스 버튼 -->
-        <ul class="SheaderMenu onlyPc">
-          <li id="SclickFirstBtn">
-            <a href="">Life on LINE</a>
-          </li>
+        <ul class="SheaderMenu">
+          <li id="SclickFirstBtn"><a href="">Life on LINE</a></li>
           <li id="SclickSecondBtn"><a href="">커뮤니케이션 앱</a></li>
           <li id="SclickThirdBtn"><a href="">서비스</a></li>
-          <li
-            class="ScurrentLine"
-            style="left: 0px; width: 93px; transition: 0.2s ease-in-out"
-          ></li>
+          <li class="ScurrentLine"></li>
         </ul>
         <!-- 2 현재 언어+ 로고-->
         <ul class="SlangMenuTop">
           <li class="iconLang">
-            <div class="Simage-warpper"style="position: relative;overflow: hidden;display: inline-block;width: 20px;height: 20px;">
-              <img class="onlyPc"src="img/langIcon.png"alt=""/>
-              <img class="onlySp" src="SON/img/langicon3.png"alt=""/>
+            <div
+              class="Simage-warpper"
+              style="
+                position: relative;
+                overflow: hidden;
+                display: inline-block;
+                width: 20px;
+                height: 20px;
+              "
+            >
+              <img class="onlyPc" src="img/langIcon.png" alt="" />
+              <img class="onlySp" src="SON/img/langicon3.png" alt="" />
             </div>
           </li>
           <li class="SiconLang onlySp"></li>
