--- a/PARK/index.html
+++ b/PARK/index.html
@@ -9,7 +9,13 @@
     <link rel="stylesheet" href="css/service__header.css" />
     <link rel="stylesheet" href="css/service__category.css" />
     <link rel="stylesheet" href="css/service__card.css" />
-    <script src="index.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
+    />
+    <script type="module" src="index.js" defer></script>
+
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
       rel="stylesheet"
