--- a/PARK/index.html
+++ b/PARK/index.html
@@ -897,7 +897,7 @@
           </article>
         </div>
       </section>
-      <div class="boxxxx"></div>
+      <div class="boxx"></div>
     </main>
   </body>
 </html>
