--- a/PARK/index.html
+++ b/PARK/index.html
@@ -30,25 +30,35 @@
         >
       </div>
       <section class="Pservice__category">
-        <ul class="Pservice__category-buttonwrapper">
+        <div class="Pservice__category-buttonwrapper">
           <button id="Pall" class="Pservice__category-button clickbutton">
             All Product
           </button>
-          <button id="comu" class="Pservice__category-button">
+          <button id="comu" class="Pservice__category-button hascolor">
             커뮤니케이션
           </button>
-          <button id="enter" class="Pservice__category-button">
+          <button id="enter" class="Pservice__category-button hascolor">
             엔터테인먼트
           </button>
-          <button id="life" class="Pservice__category-button">
+          <button id="life" class="Pservice__category-button hascolor">
             라이프 스타일
           </button>
-          <button id="shop" class="Pservice__category-button">쇼핑</button>
-          <button id="tech" class="Pservice__category-button">핀테크</button>
-          <button id="busi" class="Pservice__category-button">비즈니스</button>
-          <button id="news" class="Pservice__category-button">뉴스</button>
-          <button id="game" class="Pservice__category-button">게임</button>
-        </ul>
+          <button id="shop" class="Pservice__category-button hascolor">
+            쇼핑
+          </button>
+          <button id="tech" class="Pservice__category-button hascolor">
+            핀테크
+          </button>
+          <button id="busi" class="Pservice__category-button hascolor">
+            비즈니스
+          </button>
+          <button id="news" class="Pservice__category-button hascolor">
+            뉴스
+          </button>
+          <button id="game" class="Pservice__category-button hascolor">
+            게임
+          </button>
+        </div>
 
         <div class="Pservice__card-wrapper">
           <article class="Pservice__card comu Pall">
@@ -897,7 +907,7 @@
           </article>
         </div>
       </section>
-      <div class="boxx"></div>
+      <div class="boxxxx"></div>
     </main>
   </body>
 </html>
