--- a/index.html
+++ b/index.html
@@ -37,8 +37,12 @@
         <h1 class="Sko-bbox">
           <a href="">
             <div class="image-wrapper">
-              <img class="logo onlyPc"src="img/icon-title-pc_1.png"alt=""/>
-              <img class="logo onlySp" src="SON/img/icon-title-sp_2.png"alt=""/>
+              <img class="logo onlyPc" src="img/icon-title-pc_1.png" alt="" />
+              <img
+                class="logo onlySp"
+                src="SON/img/icon-title-sp_2.png"
+                alt=""
+              />
             </div>
           </a>
         </h1>
@@ -57,9 +61,18 @@
         <!-- 2 현재 언어+ 로고-->
         <ul class="SlangMenuTop">
           <li class="iconLang">
-            <div class="Simage-warpper"style="position: relative;overflow: hidden;display: inline-block;width: 20px;height: 20px;">
-              <img class="onlyPc"src="img/langIcon.png"alt=""/>
-              <img class="onlySp" src="SON/img/langicon3.png"alt=""/>
+            <div
+              class="Simage-warpper"
+              style="
+                position: relative;
+                overflow: hidden;
+                display: inline-block;
+                width: 20px;
+                height: 20px;
+              "
+            >
+              <img class="onlyPc" src="img/langIcon.png" alt="" />
+              <img class="onlySp" src="SON/img/langicon3.png" alt="" />
             </div>
           </li>
           <li class="SiconLang onlySp"></li>
