--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </a>
         </h1>
         <!-- 1 nav Life on LINE 커뮤니케이션 서비스 버튼 -->
-        <ul class="SheaderMenu">
+        <ul class="SheaderMenu onlyPc">
           <li id="SclickFirstBtn"><a href="">Life on LINE</a></li>
           <li id="SclickSecondBtn"><a href="">커뮤니케이션 앱</a></li>
           <li id="SclickThirdBtn"><a href="">서비스</a></li>
@@ -72,7 +72,7 @@
           </li>
           <li class="SiconLang onlySp"></li>
           <li class="ScurrentLang onlyPc">KR</li>
-          <li class="ScurrentLang onlySp">KR</li>
+          <li class="ScurrentLang onlySp white">KR</li>
         </ul>
         <!--3 언어 선택하는 박스 있는 곳 -->
         <ul class="SlangMenu Sshow">
@@ -121,6 +121,12 @@
           <div class="animated-bar"></div>
           <span class="animated-bar-text">Life on Line</span>
         </section>
+        <ul class="SheaderMenu onlySp">
+          <li id="SclickFirstBtn2"><a href="">Life on LINE</a></li>
+          <li id="SclickSecondBtn2"><a href="">커뮤니케이션 앱</a></li>
+          <li id="SclickThirdBtn2"><a href="">서비스</a></li>
+          <li class="ScurrentLine"></li>
+        </ul>
       </div>
     </main>
     <!--섹션 2(LEE)-->
