--- a/LEE/index.html
+++ b/LEE/index.html
@@ -26,6 +26,14 @@
       </div>
     </section>
 
+    <div class="LmainTitle_area">
+      <h2 class="Lmain">Life on LINE</h2>
+      <p>
+        메신저 앱 그 이상의 경험을 제공합니다. <br />라인은 새로운 인프라 경험,
+        새로운 커뮤니케이션 경험을 모두에게 전달하고자 합니다.
+      </p>
+    </div>
+
     <section id="LmainService">
       <div class="Lgrid">
         <span class="Ldot bottom">・</span>
