--- a/LEE/index.html
+++ b/LEE/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="footer.css" />
     <link rel="stylesheet" href="scrollNavWrap.css" />
     <link rel="stylesheet" href="box.css" />
+    <link rel="stylesheet" href="mainTitle.css" />
     <script src="index.js" defer></script>
   </head>
   <body>
@@ -24,15 +25,14 @@
           <div class="LscrollLine"></div>
         </div>
       </div>
+      <div class="LmainTitle_area">
+        <h2 class="Lmain">Life on LINE</h2>
+        <span class="Lsub">
+          메신저 앱 그 이상의 경험을 제공합니다. <br />라인은 새로운 인프라
+          경험, 새로운 커뮤니케이션 경험을 모두에게 전달하고자 합니다.
+        </span>
+      </div>
     </section>
-
-    <div class="LmainTitle_area">
-      <h2 class="Lmain">Life on LINE</h2>
-      <p>
-        메신저 앱 그 이상의 경험을 제공합니다. <br />라인은 새로운 인프라 경험,
-        새로운 커뮤니케이션 경험을 모두에게 전달하고자 합니다.
-      </p>
-    </div>
 
     <section id="LmainService">
       <div class="Lgrid">
