--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="LEE/communication.css" />
     <link rel="stylesheet" href="LEE/footer.css" />
     <link rel="stylesheet" href="LEE/scrollNavWrap.css" />
-    <link rel="stylesheet" href="LEE/mainTitle.css" />
     <script src="LEE/index.js" defer></script>
     <!--PARK-->
     <link rel="stylesheet" href="PARK/css/index.css" />
@@ -130,21 +129,10 @@
       </div>
     </main>
     <!--섹션 2(LEE)-->
-    <section class="Lswipe">
-      <div class="Lbox">
-        <div class="LscrollNavWrap">
-          <span class="LscrollNav">Scroll</span>
-          <div class="LscrollLine"></div>
-        </div>
-      </div>
-      <div class="LmainTitle_area">
-        <h2 class="Lmain">Life on LINE</h2>
-        <span class="Lsub">
-          메신저 앱 그 이상의 경험을 제공합니다. <br />라인은 새로운 인프라
-          경험, 새로운 커뮤니케이션 경험을 모두에게 전달하고자 합니다.
-        </span>
-      </div>
-    </section>
+    <div class="LscrollNavWrap">
+      <span class="LscrollNav">Scroll</span>
+      <div class="LscrollLine"></div>
+    </div>
     <section id="LmainService">
       <div class="Lgrid">
         <span class="Ldot bottom">・</span>
@@ -281,7 +269,7 @@
     <!--섹션 3(PARK)-->
     <main class="Pservice">
       <div class="Pservice__header">
-        <h1 class="Pservice__header-title">서비스</h1>
+        <h1 id="SmvTarget3" class="Pservice__header-title">서비스</h1>
         <span class="Pservice__header-sub"
           >일부 서비스는 특정 국가에서만 사용 가능합니다.</span
         >
