--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="LEE/communication.css" />
     <link rel="stylesheet" href="LEE/footer.css" />
     <link rel="stylesheet" href="LEE/scrollNavWrap.css" />
+    <link rel="stylesheet" href="LEE/mainTitle.css" />
     <script src="LEE/index.js" defer></script>
     <!--PARK-->
     <link rel="stylesheet" href="PARK/css/index.css" />
@@ -132,6 +133,13 @@
     <div class="LscrollNavWrap">
       <span class="LscrollNav">Scroll</span>
       <div class="LscrollLine"></div>
+    </div>
+    <div class="LmainTitle_area">
+      <h2 class="Lmain">Life on LINE</h2>
+      <span class="Lsub">
+        메신저 앱 그 이상의 경험을 제공합니다. <br />라인은 새로운 인프라 경험,
+        새로운 커뮤니케이션 경험을 모두에게 전달하고자 합니다.
+      </span>
     </div>
     <section id="LmainService">
       <div class="Lgrid">
